using java 9 resources to create a populated list